2007-07-30 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb:
    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/ui/popups.xml:
    Switch to Gtk::StatusIcon.
    Hide window on "Escape".
    New button "search" in the status icon popup-menu.

    * lib/fantasdic/ui/result_text_view.rb: search from the beginning of the
    text buffer when a new string is entered.

2007-03-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * AUTHORS:
    * lib/fantasdic.rb:
    Updated translator list

2007-03-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/jmnedict2dictd.rb: Added JMnedict to dictd converter.

    * tools/jmdict2dictd.rb: Added JMdict to dictd converter.

    * tools/dictfmt.rb: Small fixes.

2007-02-28 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/dictfmt.rb: This class will be used instead of the dictfmt
    command line tool (shipped with dictd). Its main advantage is that it can
    associate more than one index entry with one definition. This is
    especially useful for japanese: a definition may be looked up in
    hiragana or kanji.

    * tools/kanjidic22dictd.rb: improved this converter using dictfmt.rb.

    * tools/edict2dictd.rb: use dictfmt.rb.

2007-01-28 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: save preferences when preferences dialog is
    closed. Preferences used to be saved when the application is closed only.
    In case of crash, dictionaries that had just been added were lost.

2006-12-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: looking up an empty string crashed Fantasdic

2006-12-04 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/epwing2dictd.rb: added EPWING to dictd format converter
    * tools/README: updated for epwing2dictd.rb

2006-11-30 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: pressing "escape" made Fantasdic crash
