@@ -1,7 +1,10 @@
 TODO
 
-Matches side pane
-Gtk::Print* support
-Drag and drop available databases and selected databases
-D-bus service?
+- Save the PageSetup and the PrintSettings in the config file.
+- Move all the result display functions in main_app.rb to result_text_view.rb.
+- Replace the history sidepane by a matches side pane and use a combo box entry
+for the history.
+- Choose font for the text view and print in the settings.
+- Drag and drop available databases and selected databases.
+- Provide a D-bus service?
 
