@@ -1,3 +1,14 @@
+2007-08-01 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/ui.rb: Requires print and some constants like SUPPORTS_IPC,
+    SUPPORT_STATUS_ICON and SUPPORTS_PRINT.
+    * lib/fantasdic/ui/print.rb: Added, pagination seems to work fine. It would
+    be great to save the PageSetup and the PrintSettings in the config file.
+    * lib/fantasdic/ui/main_app.rb: User interface.
+    * data/fantasdic/ui/menus.xml: Menu entries.
+
+    * TODO: Updated.
+
 2007-07-30 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/ui.rb:
